@@ -56,8 +56,6 @@ public:
                            const SharedHandle<FtpConnection>& ftpConnection,
                            DownloadEngine* e,
                            const SharedHandle<SocketCore>& socket);
-
-  virtual ~FtpFinishDownloadCommand();
 };
 
 } // namespace aria2
