@@ -1,3 +1,12 @@
+2010-03-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
+	Fixed the bug that socket is added to EventPoll object twice. This
+	is because derived class FtpFinishDownloadCommand adds socket to
+	EventPoll object while base class AbstractCommand does that
+	already.
+	* src/FtpFinishDownloadCommand.cc
+	* src/FtpFinishDownloadCommand.h
+
 2010-03-21  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
 	Defined gid_t as int64_t.
